# rostr

./: .gitignore  README.md  pyproject.toml
src/rostr/: config.py  ledger.py  main.py  migrate_codes.py  people.py  project.py  report.py  utils.py
