[project]
name = "rostr"
version = "0.2.0"
description = "A powerful CLI for Resource Planning and Professional Services Automation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CK" }]
dependencies = ["rich (>=13.0.0)", "typer (>=0.24.0,<0.25.0)"]

[tool.poetry.urls]
"Homepage" = "https://github.com/chaitanyakunthe/rostr"
"Bug Tracker" = "https://github.com/chaitanyakunthe/rostr/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "rostr", from = "src" }]

[tool.poetry.scripts]
rostr = "rostr.main:app"
